--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js ./test",
     "cli": "node ./src/cli.js ./arquivos"
   },
   "repository": {
@@ -22,5 +22,8 @@
     "chalk": "^5.0.1",
     "node-fetch": "^3.2.3"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "jest": "^28.0.0"
+  }
 }
